eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-bank-api-service
spec:
  selector:
    app.kubernetes.io/name: go-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
